--- a/_includes/head.html
+++ b/_includes/head.html
@@ -25,7 +25,7 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
     <link rel="stylesheet" href="{{ "/css/galleries.css" | prepend: site.baseurl }}">
-     <link rel="stylesheet" href="{{ "/css/super-search.css" | prepend: site.baseurl }}">
+     <!-- <link rel="stylesheet" href="{{ "/css/super-search.css" | prepend: site.baseurl }}"> -->
     <link rel="stylesheet" href="{{ "/css/magnificpopup.css" | prepend: site.baseurl }}">
 
     <!-- Custom Fonts -->
